tweaks on tweaks

--- a/ldo-mc-vr.tex
+++ b/ldo-mc-vr.tex
@@ -338,7 +338,7 @@ transport equation, which we write as
 %
 where $\Sigma_t$ is the probability of all interactions, $\Sigma_s$ is the
 probability of scattering interactions, and $Q$ is the source. The \sn\
-approximation gives one equation for each angle, index with the integer $n$:
+approximation gives one equation for each angle, indexed with the integer $n$:
 %
 \begin{multline}
 \bo_n \cdot \nabla \psi_n^g(\vecr) + \Sigma_t^g(\vecr)\psi_n^g(\vecr) = \\
@@ -404,9 +404,9 @@ equations can be summarized as:
       moments.}
 \item{The positive-weight quadrature sets on which the LDO equations are based
       can integrate spherical harmonics ranging from degree 0 to degree 165.}
-\item{The LDO equations are spectrally accurate in angle. Said differently, if the solution of the
-transport equation is smooth in angle, then the error in the angular approximation decreases
-exponentially fast.}
+\item{The LDO equations are spectrally accurate in angle. Said differently, if 
+	  the solution of the transport equation is smooth in angle, then the error
+	  in the angular approximation decreases exponentially quickly.}
 \end{enumerate}
 
 For a given fixed maximum degree of integration, $L$, the corresponding number
