fix corresponding authout

--- a/ldo-mc-vr.tex
+++ b/ldo-mc-vr.tex
@@ -114,8 +114,8 @@ Reduction Parameter Generation} %title of paper
 \author{
 \vspace{20mm}
 %list of authors, with corresponding author marked by asterisk
-\\Kelly L.\ Rowland,$^{\text{a}}$  Cory D.\ Ahrens,$^\text{b}$ Steven Hamilton,$^\text{c}$ 
-\\and R.N.\ Slaybaugh$^{\text{a},\ast}$\\[4pt] 
+\\Kelly L.\ Rowland,$^{\text{a},\ast}$  Cory D.\ Ahrens,$^\text{b}$ Steven Hamilton,$^\text{c}$ 
+\\and R.N.\ Slaybaugh$^{\text{a}}$\\[4pt] 
 %affiliations of authors
 \textit{$^a$University of California, Berkeley, Nuclear Engineering Department}\\[-10pt]
 \textit{4173 Etcheverry Hall, Berkeley, CA 94720, USA} \\[-5pt]
